--- a/.gitignore
+++ b/.gitignore
@@ -38,18 +38,7 @@ captures/
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/sqldelight
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/.idea/encodings.xml
-/.idea/misc.xml
-/.idea/gradle.xml
-/.idea/vcs.xml
-/.idea/$PRODUCT_WORKSPACE_FILE$
+/.idea
 .DS_Store
 /build
 /captures
