--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -12,13 +12,19 @@ buildscript {
           'ktx': "androidx.core:core-ktx:1.0.1",
           'annotations': 'androidx.annotation:annotation:1.1.0',
           'preferences': 'androidx.preference:preference:1.1.0',
-          'test': [
-              'core': "androidx.test:core:$versions.androidXTest",
-              'runner': "androidx.test:runner:$versions.androidXTest"
-          ]
       ],
       'material': [
           'core': 'com.google.android.material:material:1.0.0'
+      ],
+      'ktorClient': [
+          'core': 'io.ktor:ktor-client-core:1.3.2',
+          'android': 'io.ktor:ktor-client-android:1.3.2',
+          'ios': 'io.ktor:ktor-client-ios:1.3.2',
+      ],
+      'coroutines': [
+          'coreCommon': 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.5',
+          'android': 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5',
+          'ios': 'org.jetbrains.kotlinx:kotlinx-coroutines-core-native:1.3.5',
       ],
       'junit': 'junit:junit:4.12',
       'truth': 'com.google.truth:truth:0.40',
