--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
   xmlns:tools="http://schemas.android.com/tools"
   package="com.jshvarts.kmp">
 
+  <uses-permission android:name="android.permission.INTERNET" />
+
   <application
+    android:name=".KmpGithubApplication"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
@@ -11,7 +14,7 @@
     android:theme="@style/AppTheme"
     tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
-    <activity android:name="com.jshvarts.kmp.MyActivity">
+    <activity android:name="com.jshvarts.kmp.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
@@ -19,4 +22,5 @@
     </activity>
 
   </application>
+
 </manifest>
