--- a/iosApp/KmpGithub/Podfile
+++ b/iosApp/KmpGithub/Podfile
@@ -3,7 +3,7 @@
 
 target 'KmpGithub' do
   # Comment the next line if you don't want to use dynamic frameworks
-  # use_frameworks!
+  use_frameworks!
 
   # Pods for KmpGithub
   pod 'shared', :path => '../../shared'
