--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:3.6.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+    classpath "org.jetbrains.kotlin:kotlin-serialization:$versions.kotlin"
   }
 }
 
