--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-multiplatform'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "org.jetbrains.kotlin.native.cocoapods"
+apply plugin: "kotlinx-serialization"
 
 android {
   compileSdkVersion versions.compileSdk
@@ -45,6 +46,11 @@ kotlin {
         implementation kotlin('stdlib-common')
         implementation deps.coroutines.coreCommon
         implementation deps.ktorClient.core
+        implementation deps.ktorClient.jsonCommon
+        implementation deps.ktorClient.logging
+        implementation deps.ktorClient.clientSerialization
+        implementation deps.ktorClient.serialization
+        implementation deps.serialization.runtimeCommon
         implementation deps.timber.common
       }
     }
@@ -61,6 +67,12 @@ kotlin {
         implementation deps.androidx.preferences
         implementation deps.coroutines.android
         implementation deps.ktorClient.android
+        implementation deps.ktorClient.coreJvm
+        implementation deps.ktorClient.serializationJvm
+        implementation deps.serialization.serializationRuntime
+        implementation deps.serialization.runtimeJvm
+        implementation deps.ktorClient.loggingJvm
+        implementation deps.ktorClient.serialization
       }
     }
     androidTest {
@@ -71,8 +83,9 @@ kotlin {
     }
     iosMain {
       dependencies {
-        implementation deps.coroutines.ios
+        implementation deps.coroutines.native
         implementation deps.ktorClient.ios
+        implementation deps.serialization.runtimeNative
       }
     }
     iosTest {}
