--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -31,11 +31,12 @@ buildscript {
           'jsonCommon': 'io.ktor:ktor-client-json:1.3.2',
           'logging': 'io.ktor:ktor-client-logging:1.3.2',
           'loggingJvm': 'io.ktor:ktor-client-logging-jvm:1.3.2',
-          'loggingNative': 'io.ktor:ktor-client-logging-native:1.3.2'
+          'loggingNative': 'io.ktor:ktor-client-logging-native:1.3.2',
       ],
       'coroutines': [
-          'coreCommon': 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.5',
           'android': 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5',
+          'coreCommon': 'org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.5',
+          'coreJvm': 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5',
           'native': 'org.jetbrains.kotlinx:kotlinx-coroutines-core-native:1.3.5',
       ],
       'serialization': [
